# QuikGPT

./: LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/componets/: ChatContainer.module.css  ChatContainer.tsx  ChatMessage.module.css  ChatMessage.tsx  ChatSidebar.module.css  ChatSidebar.tsx  Container.module.css  Container.tsx  TitleBar.module.css  TitleBar.tsx  WindowBtnsSvg.tsx
