[package]
name = "quikgpt"
version = "0.0.0"
description = "QuikGPT is an advanced AI personal assistant designed to help users manage everyday tasks and enhance productivity effortlessly with GPT-3.5 and GPT-4"
authors = ["Magomed Alimkhanov"]
license = "MIT"
repository = "https://github.com/scrythe/QuikGPT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
